--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: README
 
-Dotfiles, primarily for NixOS, managed via ~stow~. My emacs config lives in [[github:patrl/.doom.d][a separate repo]].
+Dotfiles, primarily for NixOS, managed via ~stow~. My emacs config lives in [[http://github.com/patrl/.doom.d.git][a separate repo]].
 
 * System
 
@@ -19,9 +19,9 @@ Some features:
  - Plugins are managed via [[github:zdharma/zplugin][zplugin]].
  - Fuzzy-finding via [[github:junegunn/fzf][fzf]].
  - Common unix utilities are aliased to faster rust-based alternatives:
-     - [[github:ogham/exa][exa]] instead of ~ls~.
-     - [[github:sharkdp/bat][bat]] instead of ~cat~.
-     - [[github:BurntSushi/ripgrep][ripgrep]] instead of ~grep~.
-     - [[github:sharkdp/fd][fd]] instead of ~fd~.
+     - [[https://github.com/ogham/exa.git][exa]] instead of ~ls~.
+     - [[https://github.com/sharkdp/bat.git][bat]] instead of ~cat~.
+     - [[https://github.com/BurntSushi/ripgrep.git][ripgrep]] instead of ~grep~.
+     - [[https://github.com/sharkdp/fd.git][fd]] instead of ~fd~.
 
 * TODO more info
