--- a/todo.org
+++ b/todo.org
@@ -2,14 +2,7 @@
 
 * TODO deal with ~nnn~
 * TODO package ~autopadd.cr~ for nix
+[[https://gitlab.com/repomaa/autopass.cr][Joakim Repomaa / autopass.cr · GitLab]]
 * TODO package ~teiler~ for nix
-* beets
-** finish moving music from xps 13 into kbfs
-
-* Neovim
-** TODO integrating ~direnv~ and ~coc.vim~
-After attempting to use neovim's direnv plugin with ~coc.vim~ to use ~ghcide~
-with a haskell project, it seems that ~coc~ starts too quickly -- i.e., before
-direnv has had a chance to set the right variables. One easy fix is to run
-~:CocRestart~ from inside neovim, although it would be more satisfactory to come
-up with a longer term solution.
+[[https://github.com/carnager/teiler][GitHub - carnager/teiler: Little script for screenshots and screencasts utili...]]
+* TODO submit PR for nixpkgs separating out sxhd and bspwm services
