--- a/README.org
+++ b/README.org
@@ -7,3 +7,7 @@ Declarative dots for NixOS and WSL2 managed via the [[https://nixos.org/nix/][~n
 - ~tiptree~ :: Ubuntu on WSL2 on the same hardware.
 
 You can find my emacs config (using doom-emacs) [[github:patrl/.doom.d][here]].
+
+* Local setup
+
+~git hub setup patrl~
